@@ -133,29 +133,17 @@ dependencies {
     compile 'org.apache.httpcomponents:httpmime:4.1.3'
     compile 'javax.mail:mail:1.4', gradleApi(), fileTree(dir: 'libs', include: '*.jar')
     compile 'org.python:jython-standalone:2.7-b1'
+    compile 'com.google.inject:guice:3.0'
 
     runtime 'org.apache.ant:ant-javamail:1.8.2', 'javax.mail:mail:1.4', 'javax.activation:activation:1.1.1', fileTree(dir: 'libs', include: '*.jar')
 
     testCompile 'junit:junit:4.+', 'org.apache.ant:ant:1.8.2'
     testCompile "org.spockframework:spock-core:0.6-groovy-1.8"
 
-    testRuntime 'junit:junit:4.+', 'org.apache.ant:ant:1.8.2'
+    testRuntime 'junit:junit:4.+', 'org.apache.ant:ant:1.8.2', 'cglib:cglib-nodep:2.2.2'
 }
 
 file('tmp').mkdirs()
-
-ext.generatedFile = file('tmp/plugins_reference.html')
-
-task(buildPluginReference, group: 'Ameba\'s documentation', dependsOn: ['testClasses', 'processTestResources'], type: JavaExec, description: 'Builds plugin description HTML file') {
-    def outputFile = file('tmp/buildDocumentation.out')
-    main = 'com.apphance.ameba.documentation.AmebaPluginReferenceBuilder'
-    classpath = sourceSets.test.runtimeClasspath
-    standardOutput = outputFile.newOutputStream()
-    jvmArgs "-XX:MaxPermSize=512m"
-    inputs.files(sourceSets.main.allSource, sourceSets.test.allSource)
-    outputs.upToDateSpec = new org.gradle.api.specs.AndSpec()
-    outputs.file generatedFile
-}
 
 task cleanTmp << {
     project.ant.delete(dir: "tmp")
